// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CalendarCell > props > card theme cell snapshot 1`] = `
<td
  class="t-calendar__table-body-cell"
>
  
  <div
    class="t-calendar__table-body-cell-display"
  >
    01
  </div>
  <div
    class="t-calendar__table-body-cell-content"
  >
    <!---->
  </div>
  
</td>
`;

exports[`CalendarCell > props > checked cell snapshot 1`] = `
<td
  class="t-calendar__table-body-cell t-is-checked"
>
  
  <div
    class="t-calendar__table-body-cell-display"
  >
    15
  </div>
  <div
    class="t-calendar__table-body-cell-content"
  >
    <!---->
  </div>
  
</td>
`;

exports[`CalendarCell > props > disabled cell snapshot 1`] = `
<td
  class="t-calendar__table-body-cell t-is-disabled"
>
  
  <div
    class="t-calendar__table-body-cell-display"
  >
    30
  </div>
  <div
    class="t-calendar__table-body-cell-content"
  >
    <!---->
  </div>
  
</td>
`;

exports[`CalendarCell > props > full theme cell with cellAppend snapshot 1`] = `
<td
  class="t-calendar__table-body-cell"
>
  
  <div
    class="t-calendar__table-body-cell-display"
  >
    01
  </div>
  <div
    class="t-calendar__table-body-cell-content"
  >
    appended text
  </div>
  
</td>
`;

exports[`CalendarCell > props > month mode cell snapshot 1`] = `
<td
  class="t-calendar__table-body-cell"
>
  
  <div
    class="t-calendar__table-body-cell-display"
  >
    01
  </div>
  <div
    class="t-calendar__table-body-cell-content"
  >
    <!---->
  </div>
  
</td>
`;

exports[`CalendarCell > props > now cell snapshot 1`] = `
<td
  class="t-calendar__table-body-cell t-is-checked t-calendar__table-body-cell--now"
>
  
  <div
    class="t-calendar__table-body-cell-display"
  >
    28
  </div>
  <div
    class="t-calendar__table-body-cell-content"
  >
    <!---->
  </div>
  
</td>
`;

exports[`CalendarCell > props > year mode cell snapshot 1`] = `
<td
  class="t-calendar__table-body-cell"
>
  
  <div
    class="t-calendar__table-body-cell-display"
  >
    1 月
  </div>
  <div
    class="t-calendar__table-body-cell-content"
  >
    <!---->
  </div>
  
</td>
`;
